@@ -1,3 +1,5 @@
+* Ensure namespaces only inherit from the parent namespaces `plugin` property and not static properties. [jddalton]
+
 * Reduce the number of private variables and standardize repeatedly used variable names for better minification. [jddalton]
 
 * Wrap apply() and call() of Array and String methods to ensure `thisArg` is not null or undefined. [jddalton]
